# hackathonAI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  my_report.json  performance_report.json  pyproject.toml  test_run.json
scripts/: generate_artifacts.py
src/polymarket_mcp/: __init__.py  __main__.py  server.py
src/polymarket_mcp/adapters/: polymarket_client.py
src/polymarket_mcp/config/: settings.py
src/polymarket_mcp/core/: __init__.py  bot_detector.py  pnl_calculator.py  strategy_analyzer.py
src/polymarket_mcp/logging/: __init__.py  setup.py
src/polymarket_mcp/schemas/: __init__.py  traders.py
src/polymarket_mcp/services/: __init__.py  trader_service.py
src/polymarket_mcp/tools/: __init__.py  analyze_trader_strategy.py  find_top_traders.py  generate_batch_report.py
tests/: conftest.py
tests/contract/: test_tool_contracts.py
tests/integration/: test_full_flow.py
tests/unit/: test_bot_detector.py  test_pnl_calculator.py  test_polymarket_client.py  test_strategy_analyzer.py
