[project]
name = "polymarket-mcp"
version = "0.1.0"
description = "MCP server for analyzing Polymarket trading bots"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.2",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.2",
    "structlog>=24.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests with mocked HTTP",
    "contract: MCP tool contract validation tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
